--- a/views/pages/signup.ejs
+++ b/views/pages/signup.ejs
@@ -1,9 +1,62 @@
-<h1>Register</h1>
-<form method="POST" action="/user">
-  <input type="text" name="username" placeholder="Username">
-  <input type="email" name="email" placeholder="Email Address">
-  <input type="password" name="password" placeholder="Password">
-  <input type="text" name="name" placeholder="Name">
-  <input type="text" name="surname" placeholder="Surname">
-  <input type="submit" value="submit">
-</form>
+<!DOCTYPE html>
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+
+  <title>Sign Up</title>
+</head>
+
+<body>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4 col-md-offset-4">
+        <form autocomplete="off" method="post" class="form-horizontal" role="form" action="/User">
+
+          <h1>Sign Up Form</h1>
+          <div class="form-group">
+            <div class="col-sm-9">
+              <input type="text" name="username" placeholder="Username" class="form-control" />
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="col-sm-9">
+              <input type="password" name="password" placeholder="Password" class="form-control" />
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="col-sm-9">
+              <input type="email" name="email" placeholder="Email" class="form-control" />
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="col-sm-9">
+              <input type="text" name="name" placeholder="Name" class="form-control" />
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="col-sm-9">
+              <input type="text" name="surname" placeholder="Surname" class="form-control" />
+            </div>
+          </div>
+
+          <div class="form-group">
+            <div class="col-sm-9">
+              <button type="submit" value="submit" class="btn btn-primary btn-block">Register</button>
+            </div>
+          </div>
+
+        </form>
+
+        <a href="\login">Login</a>
+      </div>
+    </div>
+  </div>
+</body>
+
+</html>
