--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
   <!--STYLES-->
-  <link rel="stylesheet" href="/styles/importer.css">
+  <link rel="stylesheet" href="/styles/custom.css">
   <!--STYLES END-->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 
@@ -58,15 +58,16 @@
 
     <%- body %>
 
-    <footer id="page-footer" class="navbar navbar-light justify-content-between flex-row-reverse">
-        <div class="nav">
-          <small class="nav-item ml-2 mr-2">
-            Gregor Bajsic
-          </small>
-          <small class="nav-item ml-2 mr-2">
-            Abhishekh Baskaran
-          </small>
-        </div>
+    <footer class="footer">
+      <small class="ml-2 mr-1">
+        Gregor Bajsic
+      </small>
+      <small>
+        &
+      </small>
+      <small class=" ml-1 mr-3">
+        Abhishekh Baskaran
+      </small>
     </footer>
 
 
