Signup, login redirect working

--- a/views/pages/signup.ejs
+++ b/views/pages/signup.ejs
@@ -2,7 +2,7 @@
   <h1 class="text-center mt-5">Create an account</h1>
   <hr/>
   <div class="signup-form">
-    <form autocomplete="off" method="post" class="form-horizontal" role="form" action="/User">
+    <form autocomplete="off" method="post" class="form-horizontal" role="form" action="/signup">
       <div class="form-group pt-3">
         <input type="text" name="username" placeholder="Username" class="form-control" />
       </div>
