--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -19,7 +19,7 @@
 
 <body>
   <div id="page-wrap">
-    <header class="navbar navbar-expand-sm navbar-dark bg-dark flex-column flex-md-row justify-content-between">
+    <header class="navbar navbar-expand-sm navbar-dark bg-dark">
 
       <div class="container-fluid">
         <a class="navbar-brand ml-2 mr-0" href="/">Webtech</a>
