--- a/views/pages/error.ejs
+++ b/views/pages/error.ejs
@@ -1,5 +1,5 @@
 <div class="container-fluid col-sm-6">
   <div class="jumbotron-fluid text-center pt-5">
-    <h2>ERROR</h2>
+    <h4><%= errMessage %></h4>
   </div>
 </div>
