--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -15,9 +15,11 @@
       </div>
     </form>
 
-    <div class="pt-3">
-      Or you can create an account here --->
-      <a href="/signup">Sign up</a>
+    <div class="pt-3 text-white" style="font-size:18px;">
+      <strong>
+        Or create an account here --->
+        <a href="/signup" style="color:black">Sign up</a>
+      </strong>
     </div>
 
   </div>
