--- a/views/pages/signup.ejs
+++ b/views/pages/signup.ejs
@@ -28,9 +28,11 @@
       </div>
     </form>
 
-    <div class="pt-3">
-      Or if you already have an account --->
-      <a href="/login">Login</a>
+    <div class="pt-3 text-white" style="font-size:18px;">
+      <strong>
+        Or you can login here --->
+        <a href="/login" style="color:black">Login</a>
+      </strong>
     </div>
 
   </div>
