--- a/assets/styles/custom.css
+++ b/assets/styles/custom.css
@@ -1,10 +1,24 @@
+body, html {
+  width: 100%;
+  height: 100%;
+}
 
 .footer {
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 40px; /* Set the fixed height of the footer here */
-  line-height: 40px; /* Vertically center the text there */
-  background-color: #f5f5f5;
+  line-height: 40px;
+  background-color: #c7b2d0;
   text-align: right;
+}
+
+.bg {
+  background-image: url('../images/background.png');
+  /* Full height */
+  height: 100%;
+  width: 100%;
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
