--- a/views/pages/eventslist.ejs
+++ b/views/pages/eventslist.ejs
@@ -6,6 +6,7 @@
 <p>Choose a preexisting event or create a new event:</p>
 
 <%if (req.user) { %>
+<div>
 <form method="get" action="/usereventjoin">
 <input type="text" name="user" value="<%= req.user.id%>">
 </section>
@@ -17,6 +18,13 @@
   <br><br>
   <input type="submit" value="submit" action="/usereventjoin">
 </form>
+</div>
+<div>
+<form method="get" action="/showevents">
+<input type="text" name="userid" value="<%= req.user.id%>">
+<input type="submit" value="Show Events for this User" action="/showevents">
+</form>
+</div>
 <% } %>
 
 </body>
