Added dropdown events

--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -41,8 +41,14 @@
               <li class="nav-item">
                 <a class="nav-link ml-2 mr-2" href="#">Account</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link ml-2 mr-2" href="#">Events</a>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle ml-2 mr-2" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Events</a>
+                <div class="dropdown-menu">
+                  <a class="dropdown-item" href="#">View Events</a>
+                  <a class="dropdown-item" href="/login">Join an Event</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="/signup">Create an Event</a>
+                </div>
               </li>
               <li class="nav-item">
                 <a class="nav-link ml-2 mr-2" href="#">Chatroom</a>
@@ -51,14 +57,17 @@
                 <a class="nav-link ml-2 mr-2" href="/logout">Log out</a>
               </li>
 
-              <% } else { %>
-                <li class="nav-item">
-                  <a class="nav-link ml-2 mr-2" href="/login">Log in</a>
-                </li>
-                <li class="nav-item">
-                  <a class="btn btn-outline-info" href="/signup">Sign up</a>
-                </li>
-                <% } %>
+            <% } else { %>
+
+              <li class="nav-item">
+                <a class="nav-link ml-2 mr-2" href="/login">Log in</a>
+              </li>
+              <li class="nav-item">
+                <a class="btn btn-outline-info" href="/signup">Sign up</a>
+              </li>
+
+            <% } %>
+
           </ul>
         </div>
       </div>
@@ -66,12 +75,11 @@
 
     <%- body %>
 
-    <footer class="footer">
-      Gregor Bajsic
-      <a href="https://github.com/Bajso" target="_blank"><i class="fab fa-github btn btn-dark ml-2 mr-4" href="#" role="button"> Github</i></a>
-      Abhishekh Baskaran
-      <a href="https://github.com/zceeaba" target="_blank"><i class="fab fa-github btn btn-dark ml-2 mr-2" href="#" role="button"> Github</i></a>
-    </footer>
+      <footer class="footer">
+        Gregor Bajsic
+        <a href="https://github.com/Bajso" target="_blank"><i class="fab fa-github btn btn-dark ml-2 mr-4" href="#" role="button"> Github</i></a> Abhishekh Baskaran
+        <a href="https://github.com/zceeaba" target="_blank"><i class="fab fa-github btn btn-dark ml-2 mr-2" href="#" role="button"> Github</i></a>
+      </footer>
 
   </div>
 
@@ -80,9 +88,9 @@
   <!--SCRIPTS END-->
 
   <!--Bootstrap-->
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
 
 </body>
 
