Error handling auth pages

--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -5,7 +5,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 
 <head>
-  <title>Webtech</title>
+  <title>Social Media App</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <!-- Viewport mobile tag for sensible mobile support -->
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -28,7 +28,7 @@
     <header class="navbar navbar-expand-sm">
 
       <div class="container-fluid">
-        <a class="navbar-brand ml-2 mr-0" href="/">Webtech</a>
+        <a class="navbar-brand ml-2 mr-0" href="/">Social Media App</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-targer="navbarResponsive">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -85,6 +85,7 @@
 
   <!--SCRIPTS-->
   <script src="/dependencies/sails.io.js"></script>
+  <script src="/js/clientjs.js"></script>
   <!--SCRIPTS END-->
 
   <!--Bootstrap-->
