--- a/views/pages/signup.ejs
+++ b/views/pages/signup.ejs
@@ -1,5 +1,15 @@
-<div class="container col-sm-3">
-  <h1 class="text-center mt-5">Create an account</h1>
+<div class="container col-sm-3 mt-5">
+
+  <% if(errMessage !== null) { %>
+
+    <div id=errbox class="jumbotron text-center text-white">
+      <%= errMessage %>
+      <script type="text/javascript">window.error = true;</script>
+    </div>
+
+  <% } %>
+
+  <h2 class="text-center">Create an account</h2>
   <hr/>
   <div class="signup-form">
     <form autocomplete="off" method="post" class="form-horizontal" role="form" action="/signup">
