--- a/assets/styles/custom.css
+++ b/assets/styles/custom.css
@@ -22,3 +22,18 @@ body, html {
   background-repeat: no-repeat;
   background-size: cover;
 }
+
+#home-title {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  font-weight: bold;
+}
+
+#errbox {
+  background-color: #393561;
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
