--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -105,6 +105,7 @@
 
     <!--SCRIPTS-->
     <script src="/dependencies/sails.io.js"></script>
+    <script src="/js/app.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
