--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -29,6 +29,7 @@
     -->
 
     <!--STYLES-->
+    <link rel="stylesheet" href="/styles/bootstrap.min.css">
     <link rel="stylesheet" href="/styles/importer.css">
     <!--STYLES END-->
   </head>
@@ -106,6 +107,8 @@
     <!--SCRIPTS-->
     <script src="/dependencies/sails.io.js"></script>
     <script src="/js/app.js"></script>
+    <script src="/js/sails.io.js"></script>
+    <script src="/js/socket.io.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
