--- a/views/pages/chatroom.ejs
+++ b/views/pages/chatroom.ejs
@@ -1,34 +1,21 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
-
-    <!-- Bring in the socket.io client -->
-    <script type="text/javascript" src="/js/socket.io.js"></script>
-    <!-- then beef it up with some convenience logic for talking to Sails.js -->
-    <script type="text/javascript" src="/js/sails.io.js"></script>
-    <!-- listen on socket.io for incoming messages -->
-    <script type="text/javascript" src="/js/app.js"></script>
-
-    <!--SCRIPTS-->
-    <script src="/dependencies/sails.io.js"></script>
-    <script src="/js/app.js"></script>
-    <!--SCRIPTS END-->
-
-    <style>
-      * { margin: 0; padding: 0; box-sizing: border-box; }
-      body { font: 13px Helvetica, Arial; }
-      form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
-      form input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
-      form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
-      #messages { list-style-type: none; margin: 0; padding: 0; }
-      #messages li { padding: 5px 10px; }
-      #messages li:nth-child(odd) { background: #eee; }
-    </style>
+    <meta charset="UTF-8" />
+    <title>Hello World</title>
   </head>
   <body>
-    <ul id="messages"></ul>
-    <form action="">
-      <input id="m" autocomplete="off" /><button>Send</button>
+    <form method="get" action="/chat">
+    <h2>User:<%= req.user.username%></h2>
+    </section>
+      <select name="Chatrooms">
+        <% console.log(JSON.stringify(listofrooms, null, '\t')) %>
+        <% for(var i=0; i<listofrooms.length; i++) {%>
+            <option value="<%= listofrooms[i].id %>"><%= listofrooms[i].roomname %></option>
+        <% } %>
+      </select>
+      <br><br>
+      <input type="submit" value="submit" action="/chat">
     </form>
   </body>
 </html>
