--- a/views/pages/chat.ejs
+++ b/views/pages/chat.ejs
@@ -14,13 +14,14 @@
 <script type="text/javascript" src="/js/app.js"></script>
 
 
-
+<body>
 <div id="newMessageForm">
     <textarea id="message" placeholder="Enter your message here:"></textarea>
     <button id="postMessageButton">Add Message</button>
 </div>
 <div id="messagesContainer">
 </div>
+</body>
 <script>
 let username="<%= username %>"
 let roomname="<%= roomname %>"
