--- a/views/pages/chat.ejs
+++ b/views/pages/chat.ejs
@@ -8,7 +8,7 @@
 <!-- Bring in the socket.io client -->
 <script type="text/javascript" src="/js/socket.io.js"></script>
 <!-- then beef it up with some convenience logic for talking to Sails.js -->
-<script type="text/javascript" src="/js/sails.io.js"></script>
+<script type="text/javascript" src="/dependencies/sails.io.js"></script>
 
 <!-- listen on socket.io for incoming messages -->
 <script type="text/javascript" src="/js/app.js"></script>
