--- a/views/pages/userpage.ejs
+++ b/views/pages/userpage.ejs
@@ -1,66 +1,79 @@
 <html>
+<head>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+</head>
 <style type="text/css">
 #ProfilePage
 {
     margin: 50px auto;
     width: 635px;
-
 border: 1px solid red;
+}
+
+#Photo
+{
+    /* Width and height of photo container */
+    width: 200px;
+    height: 200px;
+
+/* For visibility. Delete me */
+border: 1px solid green;
 }
 
 #LeftCol
 {
     /* Move it to the left */
     float: left;
-
     width: 200px;
     text-align: center;
-
     /* Move it away from the content */
     margin-right: 20px;
-
 border: 1px solid brown;
 }
-
-
-
+#PhotoOptions
+{
+    text-align: center;
+    width: 200px;
+border: 1px solid brown;
+}
 #Info
 {
     width: 400px;
     text-align: center;
-
     /* Move it to the right */
     float: right;
-
 /* For visibility. Delete me */
 border: 1px solid blue;
 }
-
 #Info strong
 {
     /* Give it a width */
     display: inline-block;
     width: 100px;
-
 /* For visibility. Delete me */
 border: 1px solid orange;
 }
-
 #Info span
 {
     /* Give it a width */
     display: inline-block;
     width: 250px;
-
 /* For visibility. Delete me */
 border: 1px solid purple;
 }
+
 </style>
 <% if (req.user) { %>
-
+<body>
 <div id="ProfilePage">
     <div id="LeftCol">
         <div id="Photo"></div>
+        <div id="ProfileOptions">
+        <form id="form1" runat="server">
+            <input type='file' id="imgInp" />
+            <img id="blah" src="#" alt="your image" />
+        </form>
+      </div>
     </div>
 
     <div id="Info">
@@ -91,6 +104,69 @@ border: 1px solid purple;
     <!-- Needed because other elements inside ProfilePage have floats -->
     <div style="clear:both"></div>
 </div>
+</body>
 <% } %>
+<script type='text/javascript'>
+function readURL(input) {
+    if (input.files && input.files[0]) {
+        var reader = new FileReader();
+
+        reader.onload = function (e) {
+            $('#blah').attr('src', e.target.result);
+            var img = new Image();
+            var ctx = canvas.getContext("2d");
+            var canvasCopy = document.createElement("canvas");
+            var copyContext = canvasCopy.getContext("2d");
+
+            img.onload = function()
+            {
+                var ratio = 1;
+
+                if(img.width > maxWidth)
+                    ratio = maxWidth / img.width;
+                else if(img.height > maxHeight)
+                    ratio = maxHeight / img.height;
+
+                canvasCopy.width = img.width;
+                canvasCopy.height = img.height;
+                copyContext.drawImage(img, 0, 0);
+
+                canvas.width = img.width * ratio;
+                canvas.height = img.height * ratio;
+                ctx.drawImage(canvasCopy, 0, 0, canvasCopy.width, canvasCopy.height, 0, 0, canvas.width, canvas.height);
+            };
+
+            img.src = reader.result;
+
+        }
+
+        reader.readAsDataURL(input.files[0]);
+    }
+}
+
+$("#imgInp").change(function(){
+    readURL(this);
+});
+
+/*
+var UserModel = Backbone.Model.extend({
+    urlRoot: '/user',
+});
+
+var UserCollection = Backbone.Collection.extend({
+    url: '/user',
+    model: UserModel,
+});
+
+var users = new UserCollection();
+users.fetch();
+
+$("#postphoto").click(function(){
+    var messageText = $("#message").val();
+    messages.create({message: messageText}, {wait: true});
+    $("#message").val("");
+});
+*/
+</script>
 
 </html>
