--- a/views/pages/homepage.ejs
+++ b/views/pages/homepage.ejs
@@ -1,5 +1,8 @@
-<div class="text-center">
+<div class="text-center pt-5">
 
-<h1 id="home-title" class="display-5">Social Media App</h1>
+  <div id="logo">
+    <object data="images/logo.svg" type="image/svg+xml">
+    </object>
+  </div>
 
 </div>
