--- a/assets/styles/custom.css
+++ b/assets/styles/custom.css
@@ -37,3 +37,20 @@ body, html {
   padding-top: 0px;
   padding-bottom: 0px;
 }
+
+#messagesContainer {
+  background-color: white;
+  overflow-y: scroll;
+}
+
+#logo {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+
+height: 150px;
+width: 50%;
+background-color: white;
+}
