--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -5,7 +5,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 
 <head>
-  <title>Social Media App</title>
+  <title>EventSM</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <!-- Viewport mobile tag for sensible mobile support -->
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -13,6 +13,7 @@
   <!--STYLES-->
   <link rel="stylesheet" href="/styles/custom.css">
   <link rel="stylesheet" href="/styles/navbar.css">
+  <link rel="stylesheet" href="/styles/userpage.css">
   <!--STYLES END-->
 
   <!--Bootstrap-->
@@ -20,6 +21,22 @@
 
   <!--Font Awesome-->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+
+  <!--Bootstrap-->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+  <!--Chat-->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.9.0/underscore-min.js" integrity="sha256-tr4FvXVZp8nkW7TvW4OYA5KWOs7fc2m5B6LN+AOn1VI=" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.3.3/backbone-min.js" integrity="sha256-0atoj6xVOJUoBM8Vp5PFywwLLE+aNl2svi4Q9UWZ+dQ=" crossorigin="anonymous"></script>
+
+  <!--SCRIPTS-->
+  <script src="/dependencies/socket.io.js"></script>
+  <script src="/dependencies/sails.io.js"></script>
+  <script src="/js/app.js"></script>
+  <script src="/js/clientjs.js"></script>
+  <!--SCRIPTS END-->
+
 </head>
 
 <body>
@@ -39,16 +56,19 @@
             <!-- req.user checks if current session is valid -->
             <% if(req.user) { %>
               <li class="nav-item">
-                <a class="nav-link ml-2 mr-2" href="#">Account</a>
+                <a class="nav-link ml-2 mr-2" href="/userpage">Account</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle ml-2 mr-2" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Events</a>
                 <div class="dropdown-menu">
-                  <a class="dropdown-item" href="#">View Events</a>
-                  <a class="dropdown-item" href="/login">Join an Event</a>
+                  <a class="dropdown-item" href="/showevents">Show Events</a>
+                  <a class="dropdown-item" href="/eventslist">Join an Event</a>
                   <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="/signup">Create an Event</a>
+                  <a class="dropdown-item" href="/createevent">Create an Event</a>
                 </div>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link ml-2 mr-2" href="/chooseroomname">Chat</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link ml-2 mr-2" href="#">Chatroom</a>
@@ -74,8 +94,8 @@
     </header>
 
 
-
     <%- body %>
+
 
       <footer class="footer">
         Gregor Bajsic
@@ -84,18 +104,6 @@
       </footer>
 
   </div>
-
-  <!--SCRIPTS-->
-  <script src="/dependencies/sails.io.js"></script>
-  <script src="/js/clientjs.js"></script>
-  <script src="/js/app.js"></script>
-  <script src="/js/socket.io.js"></script>
-  <!--SCRIPTS END-->
-
-  <!--Bootstrap-->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
 
 </body>
 
