--- a/views/pages/chooseroomname.ejs
+++ b/views/pages/chooseroomname.ejs
@@ -1,22 +1,30 @@
-<h1> Events</h1>
-<p> Welcome to the Chat choice page</p>
 <%if (req.user) { %>
-  <form method="get" action="/chat">
-  <select name="events">
-  <% for(var i=0; i<eventobj.length; i++) {%>
-    <% eventobj[i].events.forEach(function(event){%>
-      <% for(var key in event) {%>
-        <% if(event.hasOwnProperty(key)){ %>
-          <% if(key==="eventname"){ %>
-            <option value="<%= event[key] %>"><%= event[key] %></option>
+
+  <div class="container col-sm-4 mt-5">
+    <h2 class="text-center">Choose an Event</h2>
+    <hr/>
+
+    <div class="form">
+      <form method="get" class="form-horizontal" role="form" action="/chat">
+        <select name="events" style="width: 200px;">
+          <% for(var i=0; i<eventobj.length; i++) {%>
+            <% eventobj[i].events.forEach(function(event){%>
+            <% for(var key in event) {%>
+              <% if(event.hasOwnProperty(key)){ %>
+                <% if(key==="eventname"){ %>
+                  <option value="<%= event[key] %>"><%= event[key] %></option>
+                <% } %>
+              <% } %>
+            <% }%>
+            <%});%>
           <% } %>
-        <% } %>
-      <% }%>
-    <%});%>
-  <% } %>
-  </select>
-  <br><br>
-  <input type="submit" value="submit" action="/usereventjoin">
-  </form>
+        </select>
+        <div class="form-group w-25 pt-4">
+          <button type="submit" value="submit" action="/usereventjoin" class="btn btn-primary btn-block">Create</button>
+        </div>
+      </form>
+    </div>
+
+  </div>
 
 <% } %>
