--- a/views/pages/eventslist.ejs
+++ b/views/pages/eventslist.ejs
@@ -1,31 +1,46 @@
-<!DOCTYPE html>
-<html>
-<body>
-
-<h2>List of Events</h2>
-<p>Choose a preexisting event or create a new event:</p>
-
 <%if (req.user) { %>
-<div>
-<form method="get" action="/usereventjoin">
-<input type="text" name="user" value="<%= req.user.id%>">
-</section>
-  <select name="events">
-    <% for(var i=0; i<listofevents.length; i++) {%>
-        <option value="<%= listofevents[i].id %>"><%= listofevents[i].eventname %></option>
-    <% } %>
-  </select>
-  <br><br>
-  <input type="submit" value="submit" action="/usereventjoin">
-</form>
-</div>
-<div>
-<form method="get" action="/showevents">
-<input type="text" name="userid" value="<%= req.user.id%>">
-<input type="submit" value="Show Events for this User" action="/showevents">
-</form>
-</div>
-<% } %>
+  <div class="container col-sm-4 mt-5">
+    <h2 class="text-center">Join Events</h2>
+    <hr/>
 
-</body>
-</html>
+    <div class="form">
+      <form method="get" class="form-horizontal" role="form" action="/usereventjoin">
+
+        <div class="form-group pt-3">
+          <label style="width:80px;"><strong>User ID</strong></label>
+          <input class="mr-5" type="text" name="user" value="<%= req.user.id %>" style="width: 50px;">
+          <select name="events" style="width: 200px;">
+          <% for(var i=0; i<listofevents.length; i++) { %>
+              <option value="<%= listofevents[i].id %>"><%= listofevents[i].eventname %></option>
+          <% } %>
+          </select>
+        </div>
+
+        <div class="form-group w-25">
+          <button type="submit" value="submit" class="btn btn-primary btn-block">Join</button>
+        </div>
+      </form>
+    </div>
+
+    <div class="form">
+      <form method="get" class="form-horizontal" role="form" action="/showevents">
+
+        <div class="form-group pt-3">
+          <label style="width:80px;"><strong>User ID</strong></label>
+          <input class="mr-5" type="text" name="user" value="<%= req.user.id %>" style="width: 50px;">
+        </div>
+        <div class="form-group w-25">
+          <button type="submit" value="submit" class="btn btn-primary btn-block">Show events</button>
+        </div>
+      </form>
+    </div>
+
+    <div class="pt-3 text-white" style="font-size:18px;">
+      <strong>
+      Or create a new event here --->
+      <a href="/createevent" style="color:black">Create Event</a>
+      </strong>
+    </div>
+
+  </div>
+<% } %>
