--- a/assets/styles/custom.css
+++ b/assets/styles/custom.css
@@ -44,13 +44,5 @@ body, html {
 }
 
 #logo {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-
-
-height: 150px;
-width: 50%;
-background-color: white;
+  object-fit: cover;
 }
