--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -45,7 +45,8 @@
     <header class="navbar navbar-expand-sm">
 
       <div class="container-fluid">
-        <a class="navbar-brand ml-2 mr-0" href="/">Social Media App</a>
+        <a class="navbar-brand ml-2 mr-0" href="/">EventSM</a>
+        <a class="navbar-brand ml-2 mr-0" href="/logo">Logo</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-targer="navbarResponsive">
           <span class="navbar-toggler-icon"></span>
         </button>
