--- a/views/pages/homepage.ejs
+++ b/views/pages/homepage.ejs
@@ -1,8 +1,5 @@
 <div class="text-center pt-5">
 
-  <div id="logo">
-    <object data="images/logo.svg" type="image/svg+xml">
-    </object>
-  </div>
+  <h1 id="home-title" class="display-5">EventSM</h1>
 
 </div>
