--- a/views/pages/createevent.ejs
+++ b/views/pages/createevent.ejs
@@ -8,23 +8,23 @@
       <form autocomplete="off" method="get" class="form-horizontal" role="form" action="/finishedcreateevent" id="createevent">
         <div class="form-group pt-3">
           <label style="width:80px;"><strong>Name</strong></label>
-          <input type="text" name="eventname" id="input" />
+          <input type="text" name="eventname" placeholder="Tennis" id="input" />
         </div>
         <div class="form-group">
           <label style="width:80px;"><strong>Type</strong></label>
-          <input type="text" name="eventtype" id="input" />
+          <input type="text" name="eventtype" placeholder="Sport" id="input" />
         </div>
         <div class="form-group">
           <label style="width:80px;"><strong>Date</strong></label>
-          <input type="text" name="eventdate" id="input" />
+          <input type="text" name="eventdate" placeholder="Date" id="input" />
         </div>
         <div class="form-group">
           <label style="width:80px;"><strong>Start</strong></label>
-          <input type="text" name="eventstart" id="input" />
+          <input type="text" name="eventstart" placeholder="Start time" id="input" />
         </div>
         <div class="form-group">
           <label style="width:80px;"><strong>End</strong></label>
-          <input type="text" name="eventend" id="input" />
+          <input type="text" name="eventend" placeholder="End time" id="input" />
         </div>
 
         <div class="form-group w-25 pt-4">
