--- a/views/pages/logo.ejs
+++ b/views/pages/logo.ejs
@@ -1,4 +1,6 @@
 <link rel="stylesheet" href="/styles/custom.css">
-<div id="logo">
+<div id="logo-div">
+  <div id="logo">
     <object data="images/logo.svg" type="image/svg+xml"></object>
+    </div>
 </div>
